show submit button on the same line

--- a/resources/private/mypage/mypage.html
+++ b/resources/private/mypage/mypage.html
@@ -240,10 +240,8 @@
                                                      disable: disable,
                                                      id: 'newPassword2',
                                                      lLabel: 'userinfo.newPassword2'}}"></div>
-              </div>
 
-              <div class="row">
-                <div class="col-4">
+                <div class="col-1" style="padding-top:24px">
                   <button data-bind="click: save,
                                      disable: disable,
                                      enable: ok,
