--- a/resources/private/create/create.html
+++ b/resources/private/create/create.html
@@ -57,7 +57,7 @@
       <br>
       <button data-bind="click: returnPhase2" class="secondary" data-test-id="create-back" id="create-inforequest-back">
           <i class="lupicon-chevron-left"></i>
-          <span data-bind="ltext: 'tree.back'">Takaisin</span>
+          <span data-bind="ltext: 'tree.back'"></span>
       </button>
     </div>
   </section>
