Go back on error

--- a/resources/private/change-email/change-email.html
+++ b/resources/private/change-email/change-email.html
@@ -4,12 +4,20 @@
   <section class="page container" id="change-email">
     <div class="container">
       <h1 data-bind="ltext: 'change-email.header'"></h1>
-      <p data-bind="ltext: 'change-email.processing', hidden: done"></p>
-      <p data-bind="ltext: 'change-email.done', visible: done"></p>
+      <p data-bind="ltext: 'change-email.processing', ifnot: done"></p>
 
-      <span class="error-message register-error" data-bind="ltext: error"></span>
+      <div data-bind="if: success">
+        <p data-bind="ltext: 'change-email.done'"></p>
+        <a href="#login" class="btn btn-primary" data-test-id="login-new-email"><i class="lupicon-log-in"></i><span data-bind="ltext: 'continue'"></span></a>
+      </div>
 
-      <a href="#login" data-bind="visible: done" class="btn btn-primary" data-test-id="login-new-email"><i class="lupicon-log-in"></i><span data-bind="ltext: 'continue'"></span></a>
+      <div data-bind="if: error">
+        <span class="error-message register-error" data-bind="ltext: error"></span>
+        <button data-bind="click: back" class="secondary" >
+          <i class="lupicon-chevron-left"></i>
+          <span data-bind="ltext: 'back'"></span>
+        </button>
+      </div>
 
     </div>
   </section>
