--- a/resources/private/change-email/change-email.html
+++ b/resources/private/change-email/change-email.html
@@ -4,7 +4,10 @@
   <section class="page container" id="change-email">
     <div class="container">
       <h1 data-bind="ltext: 'change-email.header'"></h1>
-      <p data-bind="ltext: 'change-email.processing', ifnot: done"></p>
+
+      <div data-bind="ifnot: done">
+        <p data-bind="ltext: 'change-email.processing'"></p>
+      </div>
 
       <div data-bind="if: success">
         <p data-bind="ltext: 'change-email.done'"></p>
@@ -12,7 +15,7 @@
       </div>
 
       <div data-bind="if: error">
-        <span class="error-message register-error" data-bind="ltext: error"></span>
+        <p class="error-message register-error" data-bind="ltext: error"></p>
         <button data-bind="click: back" class="secondary" >
           <i class="lupicon-chevron-left"></i>
           <span data-bind="ltext: 'back'"></span>
