--- a/resources/private/change-email/change-email.html
+++ b/resources/private/change-email/change-email.html
@@ -15,7 +15,7 @@
       </div>
 
       <div data-bind="if: error">
-        <p class="error-message register-error" data-bind="ltext: error"></p>
+        <p class="error-message" data-bind="ltext: error"></p>
         <button data-bind="click: back" class="secondary" >
           <i class="lupicon-chevron-left"></i>
           <span data-bind="ltext: 'back'"></span>
