use success message class

--- a/resources/private/mypage/change-email-template.html
+++ b/resources/private/mypage/change-email-template.html
@@ -33,7 +33,7 @@
         <!-- /ko -->
       </div>
       <div data-bind="if: proceed" class="row">
-        <p data-bind="ltext: 'userinfo.change-email-proceed'"></p>
+        <p data-bind="ltext: 'userinfo.change-email-proceed'" class="success-message"></p>
       </div>
       <div data-bind="if: authorized()" class="row">
         <p data-bind="lhtml: 'userinfo.change-email-info'"></p>
