--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -119,15 +119,25 @@
 
             <div>
               <div class="attachment-label">
-                <h4 data-bind="with: latestVersion">
-                  <span class="attachment-label-header-item" id="test-attachment-file-name"><a data-bind="text: $data.filename, attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.fileId}"></a></span>
-                  <span class="attachment-label-header-item">
-                    <span data-bind="ltext: 'attachment.version'">Versio</span>
-                    <span data-bind="version: $data.version"></span>
-                  </span>
-                  <span class="attachment-label-header-item" data-bind="dateTimeString: $data.created"></span>
-                  <span class="attachment-label-header-item" data-bind="fullName: $data.user"></span>
-                </h4>
+                <div data-bind="with: latestVersion">
+                  <div>
+                    <span class="attachment-label-header-item" id="test-attachment-file-name">
+                      <a data-bind="text: $data.filename, attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.fileId}"></a>
+                    </span>
+                    <span class="attachment-label-header-item">
+                      <span data-bind="ltext: 'attachment.version'">Versio</span>
+                      <span data-bind="version: $data.version"></span>
+                    </span>
+                    <span class="attachment-label-header-item" data-bind="dateTimeString: $data.created"></span>
+                    <span class="attachment-label-header-item" data-bind="fullName: $data.user"></span>
+                  </div>
+                  <div data-bind="if: fileId !== originalFileId">
+                    <span data-bind="ltext: 'attachment.downloadOriginalVersion.info'"></span>
+                    <span class="attachment-label-header-item" id="original-file">
+                      <a data-bind="ltext: 'attachment.downloadOriginalVersion.link', attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.originalFileId}"></a>
+                    </span>
+                  </div>
+                </div>
 
                 <div>
                   <div class="col1 attachment-info-field">
