add legacy indicator for op description editor

--- a/resources/private/ui-components/accordion-toolbar/operation-editor/operation-editor-template.html
+++ b/resources/private/ui-components/accordion-toolbar/operation-editor/operation-editor-template.html
@@ -6,6 +6,7 @@
                       enable: enabled,
                       attr: {'data-test-id': docModel.testId('op-description-editor-' + docModel.schemaName),
                              'id': docId + '-op-description-editor'}">
+    <span data-bind="saveIndicator: indicator"></span>
   </div>
   <div class="inline-col">
     <button class="secondary"
