indicator for identifier component

--- a/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
+++ b/resources/private/ui-components/accordion-toolbar/document-identifiers/document-identifier-template.html
@@ -11,5 +11,6 @@
                            'readonly': readonly,
                            'maxlength': inputOptions.maxLength,
                            'size': inputOptions.maxLength}">
+  <span data-bind="saveIndicator: indicator"></span>
 </div>
 </script>
