--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -71,21 +71,19 @@
       </button>
       <!-- ko if: showIdentifierEditors -->
       <div class="identifier-editors container-bubble" data-bind="event: {keydown: closeEditors}">
-        <div>
-          <!-- ko if: identifierField -->
-          <div class="inline-col identifier-component"
-              data-bind="component: {name: 'document-identifier',
-                                     params: {docId: docModel.docId,
-                                              authModel: auth,
-                                              options: docModelOptions}}"></div>
-          <!-- /ko -->
-          <div class="inline-col identifier-component"
-               data-bind="component: {name: 'operation-editor',
-                                      params: {docModel: docModel,
-                                               operation: operation,
-                                               isPrimary: isPrimaryOperation,
-                                               auth: auth}}"></div>
-        </div>
+        <!-- ko if: identifierField -->
+        <div class="inline-col identifier-component"
+            data-bind="component: {name: 'document-identifier',
+                                   params: {docId: docModel.docId,
+                                            authModel: auth,
+                                            options: docModelOptions}}"></div>
+        <!-- /ko -->
+        <div class="inline-col"
+             data-bind="component: {name: 'operation-editor',
+                                    params: {docModel: docModel,
+                                             operation: operation,
+                                             isPrimary: isPrimaryOperation,
+                                             auth: auth}}"></div>
         <!-- ko if: identifierField -->
         <p data-bind="ltext: 'document.operation-identifier.notice'"></p>
         <!-- /ko -->
