--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -119,7 +119,7 @@
 
             <div>
               <div class="attachment-label">
-                <div data-bind="with: latestVersion">
+                <div id="attachment-latest-version-info" data-bind="with: latestVersion">
                   <div>
                     <span class="attachment-label-header-item" id="test-attachment-file-name">
                       <a data-bind="text: $data.filename, attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.fileId}"></a>
@@ -132,9 +132,11 @@
                     <span class="attachment-label-header-item" data-bind="fullName: $data.user"></span>
                   </div>
                   <div data-bind="if: fileId !== originalFileId">
-                    <span data-bind="ltext: 'attachment.downloadOriginalVersion.info'"></span>
-                    <span class="attachment-label-header-item" id="original-file">
-                      <a data-bind="ltext: 'attachment.downloadOriginalVersion.link', attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.originalFileId}"></a>
+                    <span class="attachment-label-info-item" >
+                      <span data-bind="ltext: 'attachment.downloadOriginalVersion.info'"></span>
+                      <span id="original-file">
+                        <a data-bind="ltext: 'attachment.downloadOriginalVersion.link', attr: {href: '/api/raw/download-attachment?attachment-id=' + $data.originalFileId}"></a>
+                      </span>
                     </span>
                   </div>
                 </div>
