fix for identifier fields robots (comopnent is open, if no values are input)

--- a/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
+++ b/resources/private/ui-components/accordion-toolbar/accordion-toolbar-template.html
@@ -70,7 +70,7 @@
         <span data-bind="ltext: 'document.approve'"></span>
       </button>
       <!-- ko if: showIdentifierEditors -->
-      <div class="identifier-editors container-bubble" data-bind="event: {keydown: closeEditors}">
+      <div class="identifier-editors container-bubble" data-test-id="identifier-editors" data-bind="event: {keydown: closeEditors}">
         <!-- ko if: identifierField -->
         <div class="inline-col identifier-component"
             data-bind="component: {name: 'document-identifier',
