use .ko-template

--- a/resources/private/application/foreman-template.html
+++ b/resources/private/application/foreman-template.html
@@ -1,101 +1,91 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <section class="page container">
+<script class="ko-template" type="text/x-jquery-tmpl" id="application-foreman-template">
+  <div>
+    <p data-bind="lhtml: 'help.AddForeman'"></p>
+    <ul class="invited-foremans" data-bind="foreach: foremanApplications" data-test-id="invited-foremans">
+      <li class="foreman">
+        <span class="foreman-role" data-bind="text: $data.displayRole"></span>
+        <span class="foreman-name" data-bind="fullName: $data"></span>
+        <span class="foreman-email" data-bind="text: $data.email ? '(' + $data.email + ')' : ''" data-test-id="foreman-email"></span>
+        <a data-bind="attr: {href: '#!/application/' + $data.id}">
+          <span class="foreman-application" data-bind="text: $data.id"></span>
+        </a>
+        <span class="foreman-state" data-bind="ltext: $data.state"></span>
+      </li>
+    </ul>
+    <button class="positive margins-s" data-bind="enable: lupapisteApp.models.applicationAuthModel.ok('create-foreman-application'), click: $data.inviteForeman, ltext: 'application.parties.addForeman'" data-test-id="invite-foreman-button"></button>
+  </div>
+</script>
 
-    <script type="text/x-jquery-tmpl" id="application-foreman-template">
-      <div>
-        <p data-bind="lhtml: 'help.AddForeman'"></p>
-        <ul class="invited-foremans" data-bind="foreach: foremanApplications" data-test-id="invited-foremans">
-          <li class="foreman">
-            <span class="foreman-role" data-bind="text: $data.displayRole"></span>
-            <span class="foreman-name" data-bind="fullName: $data"></span>
-            <span class="foreman-email" data-bind="text: $data.email ? '(' + $data.email + ')' : ''" data-test-id="foreman-email"></span>
-            <a data-bind="attr: {href: '#!/application/' + $data.id}">
-              <span class="foreman-application" data-bind="text: $data.id"></span>
-            </a>
-            <span class="foreman-state" data-bind="ltext: $data.state"></span>
-          </li>
-        </ul>
-        <button class="positive margins-s" data-bind="enable: lupapisteApp.models.applicationAuthModel.ok('create-foreman-application'), click: $data.inviteForeman, ltext: 'application.parties.addForeman'" data-test-id="invite-foreman-button"></button>
+<script class="ko-template" type="text/x-jquery-tmpl" id="application-foreman-tasks-template">
+  <div>
+    <div data-test-id="tasks-foreman" data-bind="with: $data.foremanTasks">
+      <h2 data-bind="ltext: 'foreman.requiredForemen'" style="padding-top:1em"></h2>
+      <span data-bind="saveIndicator: $parent.indicator"></span>
+      <div class="stacked legends">
+                <div class="like-btn">
+                  <i class="lupicon-circle-check"></i>
+                  <span data-bind="ltext: 'foreman.task.ok.title'"></span>
+                </div>
+                <div class="like-btn">
+                  <i class="lupicon-circle-star"></i>
+                  <span data-bind="ltext: 'foreman.task.new.title'"></span>
+                </div>
+                <div class="like-btn">
+                  <i class="lupicon-circle-attention"></i>
+                  <span data-bind="ltext: 'foreman.task.missing.title'"></span>
+                </div>
       </div>
+      <table class="tasks-foreman">
+        <thead>
+          <tr>
+            <th data-bind="ltext: 'application.taskState'"></th>
+            <th colspan="3" data-bind="ltext: 'osapuoli.tyonjohtaja.kuntaRoolikoodi._group_label'"></th>
+          </tr>
+        </thead>
+        <tbody data-bind="foreach: $data.foremen">
+          <tr data-bind="attr: {'data-test-name': $data.name}">
+            <td class="task-state" data-bind="attr: {'data-test-state': $data.statusName}">
+              <i data-bind="attr: {
+                            'class': LUPAPISTE.statusIcon(statusName),
+                            'title': loc(['foreman', 'task', statusName, 'title'])}"></i>
+            </td>
+            <td>
+              <span data-bind="text: $data.name"></span>
+            </td>
+            <td data-bind="attr: {'data-test-col-name': 'foreman-name-or-invite'}">
+              <select
+                 name="foreman-selection"
+                 class="form-input combobox long"
+                 data-bind="attr: {'data-test-id': 'foreman-selection-' + $index()},
+                            options: $data.selectableForemen,
+                            optionsText: 'displayName',
+                            optionsValue: 'id',
+                            optionsCaption: loc('choose'),
+                            value: $data.selectedForeman">
+              </select>
+
+              <a class="command" href="#" data-bind="visible: !$data.selectedForeman() && $data.canInvite(),
+                                                     click: function() { $parents[1].inviteForeman($data.taskId); }">
+                <span data-bind="ltext: 'application.parties.addForeman'"></span>
+              </a>
+              <a class="command" href="#"
+                 data-bind="visible: $data.selectedForeman,
+                            attr: {          href: '#!/application/' + $data.selectedForeman(),
+                            'data-test-id': 'foreman-application-link-' + $data.selectedForeman()}">
+                <span data-bind="ltext: 'application.open'"></span>
+              </a>
+            </td>
+            <td>
+              <a data-bind="attr: {href: '#!/application/' + $data.id}">
+                <span class="foreman-application" data-bind="text: $data.id"></span>
+              </a>
+              <span class="foreman-state" data-bind="visible: $data.state, ltext: $data.state"></span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
       </div>
-    </script>
-
-    <script type="text/x-jquery-tmpl" id="application-foreman-tasks-template">
-      <div>
-        <div data-test-id="tasks-foreman" data-bind="with: $data.foremanTasks">
-          <h2 data-bind="ltext: 'foreman.requiredForemen'" style="padding-top:1em"></h2>
-          <span data-bind="saveIndicator: $parent.indicator"></span>
-          <div class="stacked legends">
-                    <div class="like-btn">
-                      <i class="lupicon-circle-check"></i>
-                      <span data-bind="ltext: 'foreman.task.ok.title'"></span>
-                    </div>
-                    <div class="like-btn">
-                      <i class="lupicon-circle-star"></i>
-                      <span data-bind="ltext: 'foreman.task.new.title'"></span>
-                    </div>
-                    <div class="like-btn">
-                      <i class="lupicon-circle-attention"></i>
-                      <span data-bind="ltext: 'foreman.task.missing.title'"></span>
-                    </div>
-          </div>
-          <table class="tasks-foreman">
-            <thead>
-              <tr>
-                <th data-bind="ltext: 'application.taskState'"></th>
-                <th colspan="3" data-bind="ltext: 'osapuoli.tyonjohtaja.kuntaRoolikoodi._group_label'"></th>
-              </tr>
-            </thead>
-            <tbody data-bind="foreach: $data.foremen">
-              <tr data-bind="attr: {'data-test-name': $data.name}">
-                <td class="task-state" data-bind="attr: {'data-test-state': $data.statusName}">
-                  <i data-bind="attr: {
-                                'class': LUPAPISTE.statusIcon(statusName),
-                                'title': loc(['foreman', 'task', statusName, 'title'])}"></i>
-                </td>
-                <td>
-                  <span data-bind="text: $data.name"></span>
-                </td>
-                <td data-bind="attr: {'data-test-col-name': 'foreman-name-or-invite'}">
-                  <select
-                     name="foreman-selection"
-                     class="form-input combobox long"
-                     data-bind="attr: {'data-test-id': 'foreman-selection-' + $index()},
-                                options: $data.selectableForemen,
-                                optionsText: 'displayName',
-                                optionsValue: 'id',
-                                optionsCaption: loc('choose'),
-                                value: $data.selectedForeman">
-                  </select>
-
-                  <a class="command" href="#" data-bind="visible: !$data.selectedForeman() && $data.canInvite(),
-                                                         click: function() { $parents[1].inviteForeman($data.taskId); }">
-                    <span data-bind="ltext: 'application.parties.addForeman'"></span>
-                  </a>
-                  <a class="command" href="#"
-                     data-bind="visible: $data.selectedForeman,
-                                attr: {          href: '#!/application/' + $data.selectedForeman(),
-                                'data-test-id': 'foreman-application-link-' + $data.selectedForeman()}">
-                    <span data-bind="ltext: 'application.open'"></span>
-                  </a>
-                </td>
-                <td>
-                  <a data-bind="attr: {href: '#!/application/' + $data.id}">
-                    <span class="foreman-application" data-bind="text: $data.id"></span>
-                  </a>
-                  <span class="foreman-state" data-bind="visible: $data.state, ltext: $data.state"></span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          </div>
-        <button class="btn btn-primary" data-test-id="invite-other-foreman-button" data-bind="ltext: 'application.parties.addOtherForeman', click: $data.inviteForeman, enable: canInvite"></button>
-        <button class="btn btn-primary" data-test-id="invite-substitute-foreman-button" data-bind="ltext: 'application.parties.addSubstituteForeman', click: $data.inviteForeman, enable: canInvite"></button>
-      </div>
-    </script>
-
-  </section>
-</body>
-</html>
+    <button class="btn btn-primary" data-test-id="invite-other-foreman-button" data-bind="ltext: 'application.parties.addOtherForeman', click: $data.inviteForeman, enable: canInvite"></button>
+    <button class="btn btn-primary" data-test-id="invite-substitute-foreman-button" data-bind="ltext: 'application.parties.addSubstituteForeman', click: $data.inviteForeman, enable: canInvite"></button>
+  </div>
+</script>
