Change email: class form-grid -> row

--- a/resources/private/mypage/change-email-template.html
+++ b/resources/private/mypage/change-email-template.html
@@ -39,7 +39,7 @@
       </div>
     </div>
   </form>
-  <div data-bind="ifnot: authorized()" class="form-grid">
+  <div data-bind="ifnot: authorized()" class="row">
     <p data-bind="ltext: 'userinfo.change-email-not-possible'"></p>
   </div>
   </section>
