Support for explicit state change.
Authority can change the application state.

Also minor tweaks.

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -32,6 +32,10 @@
                                 <p data-bind="lhtml: 'application.invite.help'"></p>
                             </div>
                             <div class="application-summary-table">
+                              <!-- Change state (only for authority) -->
+                              <!-- ko if: $root.authorization.ok( "change-application-state" ) -->
+                              <div data-bind="component: 'change-state'"></div>
+                              <!-- /ko -->
                               <!-- Property ID: -->
                               <div>
                                 <p data-bind="ltext: 'application.property'"></p>
