Bug fix: state select reset.

--- a/resources/private/ui-components/change-state/change-state-template.html
+++ b/resources/private/ui-components/change-state/change-state-template.html
@@ -8,7 +8,7 @@
         <select class="dropdown dropdown--full-width"
                 data-bind="options: states,
                            optionsText: stateText,
-                           value: changeState,
+                           value: selectedState,
                            optionsCaption: loc( 'choose')"></select>
       </script>
     </section>
