--- a/resources/private/stamp/stamp-template.html
+++ b/resources/private/stamp/stamp-template.html
@@ -107,6 +107,10 @@
               <label data-bind="ltext: 'stamp.transparency'"></label>
               <select data-bind="options: transparencies, optionsText: 'text', optionsValue: 'value', value: transparency" class="form-input combobox"
                       data-test-id="stamp-info-transparency"></select>
+
+              <label data-bind="ltext: 'stamp.page'"></label>
+              <select data-bind="options: pages, optionsText: 'text', optionsValue: 'value', value: page" class="form-input combobox"
+                      data-test-id="stamp-info-page"></select>
             </fieldset>
           </form>
         </div>
