--- a/resources/private/ui-components/change-state/change-state-template.html
+++ b/resources/private/ui-components/change-state/change-state-template.html
@@ -6,6 +6,7 @@
         <p class="no-wrap-whitespace"
            data-bind="ltext: 'state.application'"></p>
         <select class="dropdown dropdown--full-width"
+                data-test-id="change-state-select"
                 data-bind="options: states,
                            optionsText: stateText,
                            value: selectedState,
